# yggdrasil-dns

./: .gitignore  README.md  doc.md  playbook.yaml
deploy/: .gitignore  README.md  playbook.yaml
deploy/terraform/: ansible.tf  inventory.tmpl  settings.tf
go/: go.mod  main.go
py/: generate_signature.py  main.py  requirements.txt  verify_signature.py
registry/: Cargo.toml
registry/src/: db.rs  main.rs
terraform/: group.tf  inventory.tmpl  network.tf  output.tf
