[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "sqlite"] }
axum = "0.4.7"
tracing-subscriber = "0.3.9"
tracing = "0.1.32"
jsonwebtoken = {version = "8", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
sha2 = "0.10.2"
hex = "0.4.3"
p256 = { version = "0.10.1", features = ["pem"] }
